# EntregaP2

./: .gitignore  db.sqlite3  main.py  pyproject.toml
app/models/: evento.py  participante.py  postagem.py  seguidor.py  usuario.py
app/routers/: evento_router.py  participante_router.py  postagem_router.py  seguidor_router.py  subscriber_router.py  usuario_router.py
app/schemas/: evento_schema.py  participante_schema.py  postagem_schema.py  seguidor_schema.py  usuario_schema.py
app/services/: evento_service.py  participante_service.py  postagem_service.py  seguidor_service.py
rabbitmq/: get_postagem.py  publisher.py  subscriber.py  subscriber_db.py  subscriber_dlq.py  subscriber_email.py  subscriber_sms.py
