[project]
name = "EntregaP2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "JPFUSCO_LAPTOP\\joaop", email = "joaopedrofusco@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.12",
    "python-decouple>=3.8",
    "SQLAlchemy>=2.0.40", 
    "uvicorn>=0.34.0",
    "passlib>=1.7.4",
    "pydantic>=2.11.2",
    "pika>=1.3.2",
    "requests>=2.32.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "uvicorn main:app --reload"